--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,49 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #state management
+  flutter_bloc: ^8.1.3
+  #comparing dart objects
+  equatable: ^2.0.5
+  #service locator
+  get_it: ^7.6.4
+  #date format
+  intl: ^0.18.1
+  #Database
+  floor: ^1.4.2
+  #make request to api
+  retrofit: ^4.0.3
+  #Hooks
+  flutter_hooks: ^0.20.3
+  #cached image
+  cached_network_image: ^3.3.0
+
+
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.0
+  retrofit_generator: ^8.0.2
+  floor_generator: ^1.4.2
+  build_runner: ^2.4.6
+
+
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
