--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_hooks: ^0.20.3
   #cached image
   cached_network_image: ^3.3.0
+  # for api requests:
+  dio: ^5.3.3
 
 
 
@@ -64,6 +66,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   retrofit_generator: ^8.0.2
+  retrofit: ^4.0.3
   floor_generator: ^1.4.2
   build_runner: ^2.4.6
 
